Bug 163040 - Comment pane on Sidebar in Writer shows only latest comment in Windows
Summary: Comment pane on Sidebar in Writer shows only latest comment in Windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Writer-Comments Sidebar-Comment
  Show dependency treegraph
 
Reported: 2024-09-19 09:31 UTC by Roman Kuznetsov
Modified: 2025-05-26 05:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2024-09-19 09:31:47 UTC
Description:
Comment pane on Sidebar in Writer shows only latest comment in Windows. But after save/close/reopen it shows all comments

Steps to Reproduce:
0. Make sure you have activated experimental features in LibreOffice
1. Create a new Writer document
2. Write any word and add to it a comment => look at Comment pane on Sidebar => it shows the comment, it's OK
3. Write another word in the document in new paragraph and add to it an another comment => look look at Comment pane on Sidebar => it shows only last comment instead both and it's the problem
4. Save the document, close and reopen it => Comment pane shows both comments

Actual Results:
Comment pane on Sidebar in Writer shows only latest comment in Windows

Expected Results:
Comment pane on Sidebar in Writer shows all comments in Windows at once


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5b6f384f940d40b8d40675306e103cfdd29bf700
CPU threads: 16; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded
Comment 1 Heiko Tietze 2024-09-19 10:03:16 UTC
No need for UX input at this moment. This bug will probably be fixed with the upcoming patches.
Comment 2 Rafael Lima 2024-09-19 11:50:36 UTC
As per bug 162999 comment 7 Mohit detected that only in gtk3 all comments are shown... in other DE's only the first comment is being shown. He said he'll look into it.
Comment 3 Commit Notification 2024-09-22 22:10:04 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/854d4e6e6a98688118a71357ba1171218f6e64f3

tdf#163040 Fix comment panel showing only latest comment

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.