tdf#163040 Fix comment panel showing only latest comment

Change-Id: I5e0c454a371691ba17866006cb5763ec6d7f9058
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173769
Tested-by: Jenkins
Reviewed-by: Sarper Akdemir <sarper.akdemir@allotropia.de>